# all-the-images

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  publish.yml
manifest/: schema.json
scripts/: build_manifest.py  compute_reference.py  encode_avif.py  encode_gif.py  encode_jpeg.py  encode_jxl.py  encode_png.py  encode_tiff.py  encode_webp.py  generate.py  generate_sources.py
sources/: README.md
test-harness/: Cargo.toml
test-harness/src/: main.rs
