[package]
name = "corpus-test-harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enough = { version = "0.4", features = ["std"] }

# Zen decoders (direct deps — zencodecs has version-pin issues)
zenjpeg = { path = "../../zenjpeg/zenjpeg", features = ["decoder"] }

# Visual regression
zensim = { path = "../../zensim/zensim" }
zensim-regress = { path = "../../zensim/zensim-regress" }
