[package]
name = "corpus-test-harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enough = { version = "0.4", features = ["std"] }

# Zen decoders (direct deps — zencodecs has version-pin issues)
zenjpeg = { path = "../../zen/zenjpeg/zenjpeg", features = ["decoder", "__test-utils"] }
zenpng = { path = "../../zen/zenpng" }
zengif = { path = "../../zen/zengif" }
rgb = "0.8"

# Reference decoder
mozjpeg-sys = { version = "2", features = ["with_simd", "nasm_simd"] }

# Visual regression
zensim = { path = "../../zen/zensim/zensim" }
zensim-regress = { path = "../../zen/zensim/zensim-regress" }
